# GoCompiler

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Flex_Bison/: TreeNode.cpp  bison.y  commands  flex.l  main.cpp
Lab01/inputFiles/: correct2.go  incorrect1.go
Lab01/outputFiles/expected/: correct1_expected.txt  incorrect2_expected.txt
Lab01/src/cpp/: IOController.cpp
Lab01/src/cpp/Compiler/: CompileController.cpp
Lab01/src/cpp/Tree/: ScopeTree.cpp  SymbolTree.cpp  TokenTree.cpp
Lab01/src/header/Compiler/: CompileController.h  Parser.h
Lab01/src/header/Tree/: SymbolTree.h  Tree.h
Lab02/: .gitignore  CMakeLists.txt  Makefile  TreeNode.cpp  TreeNode.h  bison.txt  calc++.cc  driver.cc  driver.hh  main.cpp  parser.yy  scanner.ll  test.sh
Lab02/Tree/: TreeNode.cpp
Lab02/inputFiles/: correct3.go  correct4.go  incorrect3.go  incorrect4.go
Lab02/src/: main.cpp
Lab02/src/Body/: TreeNode.cpp  calc++.cc  driver.cc  lexer.c  parser.c
Lab02/src/FlexBison/: parser.yy  scanner.ll
Lab02/src/Flex_Bison/: bison.y  parser.yy
Lab02/src/Header/: TreeNode.h  driver.hh  lexer.h  parser.h
Lab02/src/body/: CompileController.cpp  IOController.cpp  Parser.cpp  SemanticCheck.cpp  Symbol.cpp  TreeNode.cpp  driver.cc  main.cpp
Lab02/src/body/LLVM/: CodeGenerator.cpp
Lab02/src/body/Symbol/: SemanticCheck.cpp  Symbol.cpp  SymbolTree.cpp
Lab02/src/header/: CompileController.h  IOController.h  Parser.h  SemanticCheck.h  Symbol.h  TreeNode.h  driver.hh
Lab02/src/header/LLVM/: CodeGenerator.h
Lab02/src/header/Symbol/: SemanticCheck.h  Symbol.h  SymbolTree.h
docs/: grammar.txt
inputFiles/: correct2.go  input.go
outputFiles/expected/: correct1_expected.txt  correct2_expected.txt  incorrect1_expected.txt  incorrect2_expected.txt
src/cpp/: IOController.cpp  Tree.cpp  main.cpp
src/cpp/Compiler/: CompileController.cpp  Parser.cpp
src/cpp/Tree/: BranchTree.cpp  TokenTree.cpp  Tree.cpp
src/header/: IOController.h  Tree.h
src/header/Compiler/: CompileController.h  Parser.h
src/header/Tree/: BranchTree.h  ScopeTree.h  TokenTree.h  Tree.h
